creusot/tests/should_fail/prusti/deny_zombies/old.stderr
error: `(T, u32)` cannot be moved from `'pre` to `'post` without becoming a zombie `(creusot_contracts::prusti::Zombie<T>, u32)`
 --> old.rs:6:12
  |
6 | #[ensures((old(x)).1 == result)]
  |            ^^^^^^
  |
note: the lint level is defined here
 --> old.rs:1:9
  |
1 | #![deny(creusot::prusti_zombie)]
  |         ^^^^^^^^^^^^^^^^^^^^^^

error: `(T, u32)` cannot be moved from `'pre` to `'post` without becoming a zombie `(creusot_contracts::prusti::Zombie<T>, u32)`
 --> old.rs:5:11
  |
5 | #[ensures(x.0 == x.0)]
  |           ^

error[creusot]: binary operation `==` cannot be applied to type `creusot_contracts::prusti::Zombie<T>` since it doesn't implement `SnapEq`
 --> old.rs:5:11
  |
5 | #[ensures(x.0 == x.0)]
  |           ^^^

error: aborting due to 3 previous errors

